--- a/docs/de-de/modules/payment/pages/bankdaten-verwalten.adoc
+++ b/docs/de-de/modules/payment/pages/bankdaten-verwalten.adoc
@@ -1,7 +1,7 @@
 = Bankdaten verwalten
 :description: Payment in plentymarkets: Verwalte deine Bankdaten und die Bankdaten einer Kunden. Richte EBICS und SEPA in deinem plentymarkets System ein.
 :id: 69AQ724
-:keywords: Bank, Bankdaten, EBICS, SEPA, SEPA-Lastschriftmandat, Lastschrift, Bankinformationen, Konto, Bankkonto, Kontoinhaber, Kontonummer, Konto-Nr., Konto-Nummer, BLZ, Bankleitzahl, Account, IBAN, Bankverbindung, BIC, Mandat, Einzugsermächtigung, Abbuchungsauftrag, Bankdaten migrieren, Zahlungsverkehrsdaten, EBICS-Konto, Vormerkposten, Geschäftskonto, Geschäftskonten, Auszugsbereitstellung, buchungstagsorientiert, Buchungstag, auszugsorientiert, Auszugsnummer, Auszusgserstellung, technischer Teilnehmer, Buchung, Buchungen, STA, VMK, EU Typ, EU TYP T, Typ T, Kontoeinstellungen, Tagesumsatz, Tagesumsätze, Geschäftsvorfall, Geschäftsvorfälle, Zahlungsabruf, manueller Zahlungsabruf, INI, INI-Brief, Initialisierung, HIA, CAMT, Abrufintervall, Transaktion, Kreditinstitut, Überweisung, Lastschrift, Firmenlastschrift, Zahlungsempfänger, Gläubiger-Identifikationssnummer, Mandatsreferenz
+:keywords: Bank, Bankdaten, EBICS, SEPA, SEPA-Lastschriftmandat, Lastschrift, Bankinformationen, Konto, Bankkonto, Kontoinhaber, Kontonummer, Konto-Nr., Konto-Nummer, BLZ, Bankleitzahl, Account, IBAN, Bankverbindung, BIC, Mandat, Einzugsermächtigung, Abbuchungsauftrag, Bankdaten, Zahlungsverkehrsdaten, EBICS-Konto, Vormerkposten, Geschäftskonto, Geschäftskonten, Auszugsbereitstellung, buchungstagsorientiert, Buchungstag, auszugsorientiert, Auszugsnummer, Auszusgserstellung, technischer Teilnehmer, Buchung, Buchungen, STA, VMK, EU Typ, EU TYP T, Typ T, Kontoeinstellungen, Tagesumsatz, Tagesumsätze, Geschäftsvorfall, Geschäftsvorfälle, Zahlungsabruf, manueller Zahlungsabruf, INI, INI-Brief, Initialisierung, HIA, CAMT, Abrufintervall, Transaktion, Kreditinstitut, Überweisung, Lastschrift, Firmenlastschrift, Zahlungsempfänger, Gläubiger-Identifikationssnummer, Mandatsreferenz
 :author: team-fulfillment-payment
 
 Auf dieser Handbuchseite erfährst du, wie du deine xref:payment:bankdaten-verwalten.adoc#10[Bankinformationen] und die xref:payment:bankdaten-verwalten.adoc#63[Bankdaten deiner Kund:innen] in plentymarkets speicherst und wie du xref:payment:bankdaten-verwalten.adoc#69[EBICS] und xref:payment:bankdaten-verwalten.adoc#220[SEPA] einrichtest.
@@ -16,7 +16,7 @@ Bankdaten speichern:
 
 . Öffne das Menü *Einrichtung » Einstellungen » Bank*.
 . Gib deine Bankdaten ein. Beachte dazu die Erläuterungen in <<#tabelle-bankdaten-speichern>>.
-. *Speichere* (icon:save[role="green"]) die Einstellungen.
+. *Speichere* (icon:save[set=material, role=darkGrey]) die Einstellungen.
 
 [[tabelle-bankdaten-speichern]]
 .Bankdaten speichern
@@ -24,29 +24,40 @@ Bankdaten speichern:
 |====
 |Einstellung |Erläuterung
 
-| *Kontoinhaber*
-|Vorname und Name der Kontoinhaber:in eingeben. Für die Anzeige im Design die Template-Variable *$BankAccountOwner* nutzen.
+| *Inhaber:in*
+|Gib den Vornamen und Nachnamen der Kontoinhaber:in ein. +
+Verwende die Variable *Kontoinhaber (Stammdaten)* für E-Mail-Vorlagen, die du über den xref:crm:emailbuilder.adoc#[EmailBuilder] erstellst. +
+Verwende die Template-Variable *$BankAccountOwner* für E-Mail-Vorlagen, die du über die xref:crm:e-mails-versenden.adoc#1200[Mandanteneinstellungen] erstellst.
 
-| *Konto-Nr.*
-|Kontonummer eingeben. Für die Anzeige im Design die Template-Variable *$BankAccount* nutzen.
+| *Kontonummer*
+|Gib die Kontonummer ein. +
+Verwende die Variable *IBAN (Stammdaten)* für E-Mail-Vorlagen, die du über den xref:crm:emailbuilder.adoc#[EmailBuilder] erstellst. Die IBAN setzt sich zusammen aus der Länderkennung (DE für Deutschland), einer Prüfziffer sowie der bisherigen Bankleitzahl und Kontonummer. +
+Verwende die Template-Variable *$BankAccount* für E-Mail-Vorlagen, die du über die xref:crm:e-mails-versenden.adoc#1200[Mandanteneinstellungen] erstellst.
 
 | *BLZ*
-|Bankleitzahl eingeben. Für die Anzeige im Design die Template-Variable *$BankCode* nutzen.
+|Gib die Bankleitzahl ein. +
+Verwende die Variable *IBAN (Stammdaten)* für E-Mail-Vorlagen, die du über den xref:crm:emailbuilder.adoc#[EmailBuilder] erstellst. Die IBAN setzt sich zusammen aus der Länderkennung (DE für Deutschland), einer Prüfziffer sowie der bisherigen Bankleitzahl und Kontonummer. +
+Verwende die Template-Variable *$BankCode* für E-Mail-Vorlagen, die du über die xref:crm:e-mails-versenden.adoc#1200[Mandanteneinstellungen] erstellst.
 
 | *Bank*
-|Name der Bank eingeben. Für die Anzeige im Design die Template-Variable *$BankName* nutzen.
+|Gib den Namen der Bank ein. +
+Verwende die Variable *Bankname (Stammdaten)* für E-Mail-Vorlagen, die du über den xref:crm:emailbuilder.adoc#[EmailBuilder] erstellst. Die IBAN setzt sich zusammen aus der Länderkennung (DE für Deutschland), einer Prüfziffer sowie der bisherigen Bankleitzahl und Kontonummer. +
+Verwende die Template-Variable *$BankName* für E-Mail-Vorlagen, die du über die xref:crm:e-mails-versenden.adoc#1200[Mandanteneinstellungen] erstellst.
 
 | *IBAN*
-|Internationale Bankleitzahl eingeben. Für die Anzeige im Design die Template-Variable *$BankIban* nutzen.
+|Gib die Internationale Bankleitzahl ein. +
+Verwende die Variable *IBAN (Stammdaten)* für E-Mail-Vorlagen, die du über den xref:crm:emailbuilder.adoc#[EmailBuilder] erstellst. +
+Verwende die Template-Variable *$BankIban* für E-Mail-Vorlagen, die du über die xref:crm:e-mails-versenden.adoc#1200[Mandanteneinstellungen] erstellst.
+
 |====
 
 [#63]
-== Bankdaten von Kunden speichern
+== Bankdaten von Kund:innen speichern
 
-Im Tab *Einstellungen* in einem Kontaktdatensatz kannst du die Bankdaten des Kunden speichern und bei Bedarf löschen. Die Bankdaten benötigst du z.B. für die Zahlungsart xref:payment:lastschrift.adoc#[Lastschrift]. In plentymarkets gibt es auch eine xref:payment:beta-zahlungen-verwalten.adoc#intable-import-customer-bank-data[Importfunktion] der Bankdaten. Beachte dabei jedoch die aktuelle Rechtslage, auch in anderen Lieferländern.
+In einem xref:crm:kontakt-bearbeiten.adoc#erlaeuterungen-einzelne-bereiche[Kontaktdatensatz] im Bereich *Bankdaten* kannst du die Bankdaten der Kund:in speichern und bei Bedarf löschen. Die Bankdaten benötigst du z.B. für die Zahlungsart xref:payment:lastschrift.adoc#[Lastschrift]. In plentymarkets gibt es auch eine xref:payment:beta-zahlungen-verwalten.adoc#intable-import-customer-bank-data[Importfunktion] der Bankdaten. Beachte dabei jedoch die aktuelle Rechtslage, auch in anderen Lieferländern.
 
 [.instruction]
-Bankdaten des Kunden speichern:
+Bankdaten der Kund:in speichern:
 
 . Öffne das Menü *CRM » Kontakte*.
 . Suche den Kontakt anhand der Filtereinstellungen. Beachte dazu die Erläuterungen zu den Filtern auf der Seite xref:crm:kontakt-suchen.adoc#[Kontakt suchen]. +
@@ -55,7 +66,7 @@ Bankdaten des Kunden speichern:
 → Die Detailansicht des Kontakts wird geöffnet.
 . Klicke in der Navigation auf der linken Seite auf *Bankdaten*.
 . Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<#tabelle-bankdaten-kunden-speichern>>.
-. *Speichere* (icon:save[set=material]) die Einstellungen.
+. *Speichere* (icon:save[set=material, role=darkGrey]) die Einstellungen.
 
 [[tabelle-bankdaten-kunden-speichern]]
 .Bankdaten für Kunden speichern
@@ -63,69 +74,42 @@ Bankdaten des Kunden speichern:
 |====
 |Einstellung |Erläuterung
 
-| *IBAN; +
-BIC; +
-Kontoinhaber; +
-Kontonummer; +
-BLZ*
-|Bankdaten der Kund:in eingeben. +
-Wenn IBAN und BIC manuell eingegeben werden, werden sie mit cKonto geprüft. Bei Fehlern wird eine Meldung angezeigt. +
-Wenn die Kontonummer und die BLZ in den Bankdaten hinterlegt sind, können IBAN und BIC mittels eines automatischen Migrationsprozesses eingetragen werden. Weitere Informationen dazu im Kapitel xref:payment:bankdaten-verwalten.adoc#67[Bankdaten migrieren].
+| *IBAN*, *BIC*, *Inhaber:in*, *Kontonummer*, *Bankleitzahl*
+|Wie lauten die Bankdaten des Kontakts? +
+Die Felder *IBAN* und *Inhaber:in* sind Pflichtfelder.
+
+| *Bankname, Straße, PLZ und Ort der Bank*
+|Wie lautet der Name und die Adresse der Bank?
+
+| *Land der Bank*
+|Wähle das Land aus der Dropdown-Liste.
 
 | *SEPA-Lastschriftmandat*
-|Aktivieren, wenn die Kund:in das SEPA-Lastschriftmandat unterschrieben hat. +
-*_Wichtig:_* Erst nach dem Aktivieren der Option können die pain.008-Formate für den xref:payment:bankdaten-verwalten.adoc#220[SEPA-Zahlungsverkehr] abgerufen werden.
+|Standardmäßig ist das SEPA-Lastschriftmandat _nicht_ aktiviert (icon:toggle_off[set=material, role=darkGrey]). Aktiviere daher die Schaltfläche (icon:toggle_on[set=material, role=skyBlue]), wenn der Kontakt das SEPA-Lastschriftmandat unterschrieben hat. +
+*_Wichtig:_* Erst nach dem Aktivieren dieser Option können die pain.008-Formate für den SEPA-Zahlungsverkehr abgerufen werden. Wie du SEPA-Lastschriften mit einem Prozess automatisch in eine ZIP-Datei exportieren kannst, damit du diese Datei deiner Bank zur Verfügung stellen kannst, ist auf der Handbuchseite xref:automatisierung:aktionen.adoc#410[Aktionen/Steuerelemente] im Handbuchbereich xref:automatisierung:prozesse.adoc#[Prozesse] beschrieben.
+
+| *SEPA-Lastschriftmandat erteilt am*
+|Nur sichtbar, wenn die Option *SEPA-Lastschriftmandat* aktiviert wurde (icon:toggle_on[set=material, role=skyBlue]). +
+Das Datum, an dem der Kontakt dem SEPA-Lastschriftmandat zugestimmt hat, wird angezeigt. Alternativ kannst du das Datum aus dem Kalender wählen (icon:today[set=material]).
 
 | *Art des Mandats*
-| *SEPA-Basis-Lastschrift* = Mit der Einzugsermächtigung (Standard-Kunden) vergleichbares Mandat. +
-*SEPA-Firmen-Lastschrift* = Mit dem Abbuchungsauftrag (Firmen-Kunden, B2B) vergleichbares Mandat.
+|Nur sichtbar, wenn die Option *SEPA-Lastschriftmandat* aktiviert wurde (icon:toggle_on[set=material, role=skyBlue]). +
+Wähle eine Option aus der Dropdown-Liste: +
+*SEPA-Firmen-Lastschrift* = Mit dem Buchungsauftrag (Firmenkund:innen, B2B) vergleichbares Mandat. +
+*SEPA-Basis-Lastschrift* = Mit der Einzugsermächtigung (Standardkund:innen) vergleichbares Mandat.
 
 | *Ausführungsmodalität*
-| *Einmalige Zahlung* = Typischerweise verwendet für Standard-Aufträge. +
-*Wiederkehrende Zahlung* = Typischerweise verwendet für regelmäßige Abbuchungen, Abonnements etc.
-|====
+|Nur sichtbar, wenn die Option *SEPA-Lastschriftmandat* aktiviert wurde (icon:toggle_on[set=material, role=skyBlue]). +
+Wähle eine Option aus der Dropdown-Liste: +
+*Einmalige Zahlung* = Wird typischerweise für Standardaufträge verwendet. +
+*Wiederkehrende Zahlung* = Wird typischerweise für regelmäßige Abbuchungen, Abo-Verträge etc. verwendet.
 
-[#67]
-== Bankdaten migrieren
-
-Um den Zahlungsverkehr mit deinen Kund:innen auf SEPA umzustellen, migriere die Bankdaten der Kund:innen, die per Lastschrift bezahlen. Das sind Kund:innen, die die Zahlungsart Lastschrift nutzen oder für die Abonnements im Menü *Scheduler* eingerichtet sind.
-
-[.instruction]
-Bankdaten migrieren:
-
-. Öffne das Menü *Einrichtung » Einstellungen » Hosting » Migration*.
-. Klappe den Bereich *Bankdaten* auf.
-. Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<#tabelle-migration-bankdaten>>.
-. Klicke auf das *Zahnrad* (icon:cog[]), um die Migration durchzuführen.
-. Prüfe nach der Migration die Kundendaten im *Tab: Einstellungen » Tab: Bankdaten*.
-
-[[tabelle-migration-bankdaten]]
-.Migration von Bankdaten
-[cols="1,3"]
-|====
-|Einstellung |Erläuterung
-
-| *Total*
-|Anzahl der im System vorhandenen Bankdaten.
-
-| *Ohne IBAN*
-|Bankdaten, für die keine SEPA-Daten vorhanden sind.
-
-| *Bankverbindungen*
-|Wählen, welche Bankverbindungen migriert werden sollen. +
-*Nur Bankverbindungen ohne IBAN/BIC* = Nur Bankdaten, bei denen IBAN und BIC nicht vorhanden sind, werden migriert. +
-*Alle Bankdaten* = Alle Bankdaten werden migriert. Wählen, wenn nicht sicher ist, ob die Bankdaten alle korrekt sind. Bei der Migration erfolgt eine Prüfung im Hintergrund durch cKonto, sodass eventuelle Fehler gemeldet werden.
-
-| *Anzahl*
-|Anzahl der Datensätze wählen, die migriert werden sollen. +
-*Alle* = Alle Datensätze werden migriert. +
-*500* = 500 Datensätze werden migriert. Wenn sehr viele Bankdaten migriert werden müssen, *500* wählen, damit die Migration unterteilt wird.
 |====
 
 [#69]
 == EBICS
 
-EBICS (Electronic Banking Internet Communication Standard) bezeichnet einen in Deutschland multibankfähigen Standard für die Übertragung von Zahlungsverkehrsdaten über das Internet. Durch die Umstellung auf das standardisierte EBICS-Verfahren wird der Abruf von Zahlungen vereinfacht und einheitlich. Dieses Plugin integriert EBICS vollständig in plentymarkets, der Umweg über Drittanbieter ist nicht nötig.
+EBICS (Electronic Banking Internet Communication Standard) bezeichnet einen in Deutschland multibankfähigen Standard für die Übertragung von Zahlungsverkehrsdaten über das Internet. Durch die Umstellung auf das standardisierte EBICS-Verfahren wird der Abruf von Zahlungen vereinfacht und einheitlich. EBICS wird mit dem EBICS-Plugin in dein System eingebunden. Das bedeutet, dass dieses Plugin EBICS vollständig in plentymarkets integriert, der Umweg über Drittanbieter ist nicht nötig.
 
 Für die Kommunikation per EBICS werden deine Umsätze in einer Datei ähnlich einem Kontoauszug bei deiner Bank gespeichert. Die Datei wird von plentymarkets importiert und die Umsätze werden in deinem plentymarkets System gebucht. Das verknüpfte EBICS-Konto stellt eine Art Verbundkonto dar, das mehrere Bankkonten umfassen kann. Täglich wird eine Datei mit allen Umsätzen des EBICS-Kontos erzeugt (Format CAMT053 oder MT940), sofern diese bei der Bank aktiviert sind. Diese Datei kann dann nachts abgerufen werden und am nächsten Morgen stehen alle Eingänge des Tages zur Verfügung. Außerdem werden täglich mehrere Dateien mit Vormerkposten erzeugt (Format CAMT052 oder MT942), die ebenfalls abgerufen werden können, um die Vormerkposten in dein plentymarkets System einzubuchen.
 
@@ -134,7 +118,7 @@ EBICS wird mit dem EBICS-Plugin in dein System eingebunden. Lade dafür das EBIC
 [IMPORTANT]
 .EBICS-Modul buchen
 ====
-Um ein Konto anzulegen, muss zuerst das EBICS-Modul über den Konfigurator gebucht werden.
+Um ein Konto anzulegen, muss zuerst das EBICS-Modul über den xref:business-entscheidungen:dein-vertrag.adoc#30[Konfigurator] gebucht werden.
 ====
 
 [#70]
@@ -194,7 +178,7 @@ plentymarkets benötigt nur einen Teilnehmer, z.B. einen technischen Teilnehmer 
 [#110]
 ==== Auftragstyp
 
-In <<table-order-signature-types>> werden die Auftragstypen erläutert, die plentymarkets für einen erfolgreichen Abruf der Buchungen deines EBICS-Kontos benötigt. Beachte zudem die Erläuterungen zu den Auftrags- und Unterschriftstypen im Formular deiner Bank.
+In <<#table-order-signature-types>> werden die Auftragstypen erläutert, die plentymarkets für einen erfolgreichen Abruf der Buchungen deines EBICS-Kontos benötigt. Beachte zudem die Erläuterungen zu den Auftrags- und Unterschriftstypen im Formular deiner Bank.
 
 [[table-order-signature-types]]
 .Auftrags- und Unterschriftstypen
@@ -223,7 +207,7 @@ Konto anlegen:
 . Öffne das Menü *Einrichtung » Aufträge » Zahlung » Plugins » EBICS*.
 . Klicke auf *Neues Konto erstellen* (icon:plus-square[role="green"]). +
 → Das Fenster *Neues Konto* wird geöffnet.
-. Nimm die Einstellungen gemäß <<table-ebics-account-settings>> vor.
+. Nimm die Einstellungen gemäß <<#table-ebics-account-settings>> vor.
 . *Speichere* (icon:save[role=green]) die Einstellungen. +
 → Das Konto wird erstellt.
 
@@ -288,7 +272,7 @@ Konto bearbeiten:
 . Öffne das Menü *Einrichtung » Aufträge » Zahlung » Plugins » EBICS*.
 . Klicke auf *Bearbeiten*, um das Konto zu öffnen. +
 → Das Fenster *Kontoeinstellungen* wird geöffnet.
-. Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<table-ebics-settings>>.
+. Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<#table-ebics-settings>>.
 . *Speichere* (icon:save[role=green]) die Einstellungen.
 
 [IMPORTANT]
@@ -320,7 +304,7 @@ _Hinweis_: Diese Funktion ruft lediglich die im System vorhandenen Daten noch ei
 |Ruft die auf dem Konto verfügbaren Auftragsarten ab. Es handelt sich dabei um die Arten, die gerade auf dem Server verfügbar sind. Achtung: Wenn du diese Funktion zu häufig nutzt, kann es zu Fehlfunktionen kommen.
 
 | *Konto initialisieren*
-|	Die Schlüssel werden generiert und mittels INI zum Abgleich an die Bank übermittelt. HIA wird ausgeführt.
+|Die Schlüssel werden generiert und mittels INI zum Abgleich an die Bank übermittelt. HIA wird ausgeführt.
 
 | *INI-Brief*
 |Erstellt aus den generierten Schlüsseln einen INI-Brief als PDF und lädt das Dokument herunter. Dieser Brief muss ausgedruckt und an die Bank geschickt werden. Die Schaltfläche ist inaktiv, bis die Schlüssel erfolgreich erstellt wurden. +
@@ -331,26 +315,26 @@ _Hinweis_: Für den fehlerfreien Download des INI-Briefs muss der Pop-up-Blocker
 
 | *Experten-Modus*
 |Alle folgenden Schaltflächen sind ausschließlich für den Fall vorgesehen, dass die Bank eine erneute Ausführung anfordert, und stehen erst nach Aktivierung des Toggle-Buttons zur Verfügung. +
-_Wichtig_: Die Nutzung des Expertenmodus kann dein EBICS-Konto außer Kraft setzen, sodass es durch das Kreditinstitut zurückgesetzt werden muss. Nutze diese Funktionen ausschließlich, wie von deinem Kreditinstitut gefordert.
+*_Wichtig:_* Die Nutzung des Expertenmodus kann dein EBICS-Konto außer Kraft setzen, sodass es durch das Kreditinstitut zurückgesetzt werden muss. Nutze diese Funktionen ausschließlich, wie von deinem Kreditinstitut gefordert.
 
 | *Schlüssel erstellen*
 |Erstellt die Schlüssel für die Initialisierung.
 
 | *INI*
-|	Initialisiert das EBICS-Konto.
+|Initialisiert das EBICS-Konto.
 
 | *HIA*
-|	Führt HIA aus.
+|Führt HIA aus.
 
 | *HPB*
-|	Führt HPB aus.
+|Führt HPB aus.
 
 |====
 
 [IMPORTANT]
 .Änderungen nur nach Rücksprache mit der Bank
 ====
-Nimm Änderungen nur nach Rücksprache mit deiner Bank vor. Wenn du z.B. die neuen CAMT-Formate nutzen möchtest, kläre mit deiner Bank, ob das Format unterstützt wird und lasse das Format aktivieren. Passe dann die Kontoinstellungen und ggf. die Vormerkposten wie hier beschrieben an.
+Nimm Änderungen nur nach Rücksprache mit deiner Bank vor. Wenn du z.B. die neuen CAMT-Formate nutzen möchtest, kläre mit deiner Bank, ob das Format unterstützt wird und lasse das Format aktivieren. Passe dann die Kontoeinstellungen und ggf. die Vormerkposten wie hier beschrieben an.
 
 Wenn ein Konto zurückgesetzt wurde und deine Bank neue Schlüssel benötigt, empfehlen wir, den betreffenden EBICS-Account in plentymarkets neu einzurichten, da nur dann neue Schlüssel erzeugt werden.
 ====
@@ -392,7 +376,7 @@ Deine Bank stellt maximal zweimal täglich die Transaktionen des jeweiligen Tage
 [#160]
 === Abrufintervalle Vormerkposten
 
-Da die Zeiten, in denen die Vormerkposten bereitgestellt werden, von Kreditinstitut zu Kreditinstitut unterschiedlich sind, ruft plentymarkets die Daten, falls verfügbar, zwischen 8:00 und 18:00 stündlich von den Kreditinstituten ab. Bei EBICS-Buchungen mit unbestätigtem Vormerkposten wird die Angabe *Vormerkposten* in roter Schrift dargestellt. Wird der Vormerkposten bestätigt, wechselt der Schriftzug von rot auf grün. Zusätzlich wird die bestätigte Buchung dem entsprechenden Auftrag zugeordnet, ohne die Zahlung nochmals zu buchen. Damit Vormerkposten bestätigt werden, ist die Aktivierung der Tagesumsätze erforderlich. Beachte dazu die Erläuterungen in <<table-ebics-settings>>.
+Da die Zeiten, in denen die Vormerkposten bereitgestellt werden, von Kreditinstitut zu Kreditinstitut unterschiedlich sind, ruft plentymarkets die Daten, falls verfügbar, zwischen 8:00 und 18:00 stündlich von den Kreditinstituten ab. Bei EBICS-Buchungen mit unbestätigtem Vormerkposten wird die Angabe *Vormerkposten* in roter Schrift dargestellt. Wird der Vormerkposten bestätigt, wechselt der Schriftzug von rot auf grün. Zusätzlich wird die bestätigte Buchung dem entsprechenden Auftrag zugeordnet, ohne die Zahlung nochmals zu buchen. Damit Vormerkposten bestätigt werden, ist die Aktivierung der Tagesumsätze erforderlich. Beachte dazu die Erläuterungen in <<#table-ebics-settings>>.
 
 [#170]
 === Geschäftsvorfälle verwalten
@@ -430,7 +414,7 @@ Geschäftsvorfälle verwalten:
 . Klicke auf der Karte des Kontos, das du verwalten willst, auf *Bearbeiten*. +
 → Das Fenster Kontoeinstellungen wird geöffnet.
 . Klicke auf *Geschäftsvorfälle*.
-. Nimm die Einstellungen gemäß <<table-ebics-settings-transactions>> vor.
+. Nimm die Einstellungen gemäß <<#table-ebics-settings-transactions>> vor.
 . *Speichere* (icon:save[role=green]) die Einstellungen.
 
 [[table-ebics-settings-transactions]]
@@ -440,7 +424,7 @@ Geschäftsvorfälle verwalten:
 |Einstellung |Erläuterung
 
 | *Code*
-|	Code eines spezifischen Geschäftsvorfalls eingeben und *Suchen* klicken.
+|Code eines spezifischen Geschäftsvorfalls eingeben und *Suchen* klicken.
 
 |*Bezeichnung*
 |Beschreibung eines spezifischen Geschäftsvorfalls eingeben und *Suchen* klicken.
@@ -506,12 +490,12 @@ Migration durchführen:
 [#220]
 == SEPA-Lastschriftmandat einrichten
 
-Im Rahmen der SEPA-Initiative (Single Euro Payments Area) ist der Euro-Zahlungsverkehr in Deutschland und 35 weiteren europäischen Staaten seit dem 1. Februar 2014 vereinheitlicht. Seit diesem Stichtag sind Überweisungen und Lastschriften nur noch mit IBAN und BIC möglich. Die Bankdaten deiner Kunden kannst du in deinem plentymarkets System automatisch xref:payment:bankdaten-verwalten.adoc#67[migrieren]. Lastschriften werden unterteilt in:
+Im Rahmen der SEPA-Initiative (Single Euro Payments Area) ist der Euro-Zahlungsverkehr in Deutschland und 35 weiteren europäischen Staaten seit dem 1. Februar 2014 vereinheitlicht. Seit diesem Stichtag sind Überweisungen und Lastschriften nur noch mit IBAN und BIC möglich. Lastschriften werden unterteilt in:
 
 * *SEPA-Basis-Lastschrift* → vergleichbar mit einer Einzugsermächtigung
 * *SEPA-Firmenlastschrift* → vergleichbar mit einem Abbuchungsauftrag
 
-Firmenlastschriften sind nur zwischen Unternehmen zulässig (B2B) und benötigen gesonderte Mandate. Von deinen Kunden benötigst du ein SEPA-Lastschriftmandat, das die bisherige Einzugsermächtigung ersetzt. Das Mandat bildet die rechtliche Grundlage zum Einzug von SEPA-Lastschriften.
+Firmenlastschriften sind nur zwischen Unternehmen zulässig (B2B) und benötigen gesonderte Mandate. Von deinen Kund:innen benötigst du ein SEPA-Lastschriftmandat, das die bisherige Einzugsermächtigung ersetzt. Das Mandat bildet die rechtliche Grundlage zum Einzug von SEPA-Lastschriften.
 
 [#230]
 === Dokumentenvorlage erstellen
@@ -660,7 +644,8 @@ E-Mail-Vorlage versenden:
 . Klicke in der Symbolleiste oben auf *E-Mail-Vorlage senden* (icon:forward_to_inbox[set=material]). +
 → Das Fenster *E-Mail-Vorlage senden* öffnet sich.
 . Wähle die zuvor erstellte E-Mail-Vorlage zur SEPA-Information aus der Dropdown-Liste.
-. Klicke auf *Ausführen*.
+. Klicke auf *Ausführen*. +
+→ Die E-Mail-Vorlage wird an die gewählten Kontakte gesendet.
 
 Weitere Details dazu findest du im Kapitel xref:crm:kontakt-bearbeiten.adoc#gruppenfunktion[Gruppenfunktion nutzen] der Handbuchseite xref:crm:kontakt-bearbeiten.adoc#[Kontakt bearbeiten].
 
@@ -681,7 +666,7 @@ SEPA-Lastschriftmandat in den Bankdaten aktivieren:
 . Aktiviere (icon:toggle_on[set=material, role=skyBlue]) *SEPA-Lastschriftmandat*.
 . *Speichere* (icon:save[set=material]) die Einstellungen.
 
-Weitere Informationen zu Bankdaten findest du im Kapitel xref:payment:bankdaten-verwalten.adoc#63[Bankdaten von Kunden speichern].
+Weitere Informationen zu Bankdaten findest du im Kapitel xref:payment:bankdaten-verwalten.adoc#63[Bankdaten von Kund:innen speichern].
 
 [#290]
 === SEPA-Zahlungsverkehr automatisieren
