fix typos found during translation

--- a/docs/de-de/modules/business-entscheidungen/pages/absatz.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/absatz.adoc
@@ -155,7 +155,7 @@ include::partial$lager-warenausgangsdatum.adoc[]
 === Mandant, Fertigstellungsdatum
 
 :kennzahl: Der Absatz
-:das-bedeutet: So erkennst du auf einen Blick, welche Stückzahlen aufgeschlüsselt nach Mandant verkauft werden.. Differenziert wird zusätzlich nach dem Datum, an dem der Warenausgang für die Aufträge gebucht wurde.
+:das-bedeutet: So erkennst du auf einen Blick, welche Stückzahlen aufgeschlüsselt nach Mandant verkauft werden. Differenziert wird zusätzlich nach dem Datum, an dem der Warenausgang für die Aufträge gebucht wurde.
 
 include::partial$mandant-warenausgangsdatum.adoc[]
 
