--- a/docs/de-de/modules/business-entscheidungen/pages/durchschnittliche-anzahl-auftragspositionen.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/durchschnittliche-anzahl-auftragspositionen.adoc
@@ -138,7 +138,7 @@ include::partial$lager-warenausgangsdatum.adoc[]
 === Mandant, Fertigstellungsdatum
 
 :kennzahl: Die durchschnittliche Anzahl der Auftragspositionen
-:das-bedeutet: So erkennst du auf einen Blick, wie viele Auftragspositionen durchschnittlich über welchen Mandanten verkauft werden. Differenziert wird zusätzlich nach dem Datum, aan dem der Warenausgang für die Aufträge gebucht wurde.
+:das-bedeutet: So erkennst du auf einen Blick, wie viele Auftragspositionen durchschnittlich über welchen Mandanten verkauft werden. Differenziert wird zusätzlich nach dem Datum, an dem der Warenausgang für die Aufträge gebucht wurde.
 
 include::partial$mandant-warenausgangsdatum.adoc[]
 
