--- a/docs/de-de/modules/payment/pages/bankdaten-verwalten.adoc
+++ b/docs/de-de/modules/payment/pages/bankdaten-verwalten.adoc
@@ -109,7 +109,7 @@ Wähle eine Option aus der Dropdown-Liste: +
 [#69]
 == EBICS
 
-EBICS (Electronic Banking Internet Communication Standard) bezeichnet einen in Deutschland multibankfähigen Standard für die Übertragung von Zahlungsverkehrsdaten über das Internet. Durch die Umstellung auf das standardisierte EBICS-Verfahren wird der Abruf von Zahlungen vereinfacht und einheitlich. EBICS wird mit dem EBICS-Plugin in dein System eingebunden. Das bedeutet, dass dieses Plugin EBICS vollständig in plentymarkets integriert, der Umweg über Drittanbieter ist nicht nötig.
+EBICS (Electronic Banking Internet Communication Standard) bezeichnet einen in Deutschland multibankfähigen Standard für die Übertragung von Zahlungsverkehrsdaten über das Internet. Durch die Umstellung auf das standardisierte EBICS-Verfahren wird der Abruf von Zahlungen vereinfacht und einheitlich. EBICS wird mit dem EBICS-Plugin in dein System eingebunden. Das bedeutet, dass dieses Plugin EBICS vollständig in plentymarkets integriert, der Umweg über Drittanbieter ist nicht erforderlich.
 
 Für die Kommunikation per EBICS werden deine Umsätze in einer Datei ähnlich einem Kontoauszug bei deiner Bank gespeichert. Die Datei wird von plentymarkets importiert und die Umsätze werden in deinem plentymarkets System gebucht. Das verknüpfte EBICS-Konto stellt eine Art Verbundkonto dar, das mehrere Bankkonten umfassen kann. Täglich wird eine Datei mit allen Umsätzen des EBICS-Kontos erzeugt (Format CAMT053 oder MT940), sofern diese bei der Bank aktiviert sind. Diese Datei kann dann nachts abgerufen werden und am nächsten Morgen stehen alle Eingänge des Tages zur Verfügung. Außerdem werden täglich mehrere Dateien mit Vormerkposten erzeugt (Format CAMT052 oder MT942), die ebenfalls abgerufen werden können, um die Vormerkposten in dein plentymarkets System einzubuchen.
 
@@ -342,7 +342,7 @@ Wenn ein Konto zurückgesetzt wurde und deine Bank neue Schlüssel benötigt, em
 [#140]
 ==== Konto initialisieren
 
-Nachdem du die Zugangsdaten in plentymarkets eingegeben hast, meldet sich plentymarkets auf elektronischem Weg bei deiner Bank an. Für einen EBICS-Abruf sind geheime Schlüsselwerte nötig, die programmintern generiert werden. Nachdem die Schlüssel erzeugt wurden und die elektronische Erstanmeldung abgeschlossen ist, müssen die Schlüssel unterschrieben und in ausgedruckter Form an die Bank geliefert werden. Nur der in plentymarkets hinterlegte Teilnehmer ist zu dieser Unterschrift berechtigt. Die Bank wird keine Freigabe der EBICS-Schnittstelle erteilen, wenn die Unterschrift nicht von genau diesem hinterlegten Teilnehmer stammt.
+Nachdem du die Zugangsdaten in plentymarkets eingegeben hast, meldet sich plentymarkets auf elektronischem Weg bei deiner Bank an. Für einen EBICS-Abruf sind geheime Schlüsselwerte erforderlich, die programmintern generiert werden. Nachdem die Schlüssel erzeugt wurden und die elektronische Erstanmeldung abgeschlossen ist, müssen die Schlüssel unterschrieben und in ausgedruckter Form an die Bank geliefert werden. Nur der in plentymarkets hinterlegte Teilnehmer ist zu dieser Unterschrift berechtigt. Die Bank wird keine Freigabe der EBICS-Schnittstelle erteilen, wenn die Unterschrift nicht von genau diesem hinterlegten Teilnehmer stammt.
 
 [TIP]
 .Pop-up-Blocker im Browser
@@ -563,7 +563,7 @@ Y-Achse*
 [#240]
 === PDF-Vorlage hochladen
 
-Im Tab *PDF-Vorlage* lädst du eine PDF-Vorlage hoch, die das Layout deines Briefpapiers mit Firmendaten und Logo deines Unternehmens beinhaltet. Füge bei der Gestaltung der PDF-Vorlage die nötigen Feldnamen für die Werte der Vorlage und im unteren Bereich ein Unterschriftenfeld mit einer Linie für die Unterschrift des Kunden ein.
+Im Tab *PDF-Vorlage* lädst du eine PDF-Vorlage hoch, die das Layout deines Briefpapiers mit Firmendaten und Logo deines Unternehmens beinhaltet. Füge bei der Gestaltung der PDF-Vorlage die erforderlichen Feldnamen für die Werte der Vorlage und im unteren Bereich ein Unterschriftenfeld mit einer Linie für die Unterschrift des Kunden ein.
 
 [IMPORTANT]
 .Felder in der PDF-Vorlage hinterlegen
@@ -652,7 +652,7 @@ Weitere Details dazu findest du im Kapitel xref:crm:kontakt-bearbeiten.adoc#grup
 [#280]
 === SEPA-Zahlungsverkehr in den Bankdaten aktivieren
 
-Wenn du das unterschriebene SEPA-Lastschriftmandat eines Kunden erhalten hast, ist die nachfolgend beschriebene Einstellung nötig, um den SEPA-Zahlungsverkehr zu aktivieren und die pain008-Formate abzurufen.
+Wenn du das unterschriebene SEPA-Lastschriftmandat eines Kunden erhalten hast, ist die nachfolgend beschriebene Einstellung erforderlich, um den SEPA-Zahlungsverkehr zu aktivieren und die pain008-Formate abzurufen.
 
 [.instruction]
 SEPA-Lastschriftmandat in den Bankdaten aktivieren:
