feat: create new changelog file

--- a/docs/de-de/modules/changelog/pages/2022-06-29.adoc
+++ b/docs/de-de/modules/changelog/pages/2022-06-29.adoc
@@ -1,11 +1,12 @@
-= Changelog 22. Juni 2022
+= Changelog 29. Juni 2022
 :author: kevin-stederoth
 :sectnums!:
 :page-index: false
-:startWeekDate: 16. Juni 2022
-:endWeekDate: 22. Juni 2022
+:page-aliases: ROOT:changelog.adoc
+:startWeekDate: 23. Juni 2022
+:endWeekDate: 29. Juni 2022
 
-// Ab diesem Eintrag weitermachen: https://forum.plentymarkets.com/t/nummernkreise-hinweis-auf-die-erlaubte-anzahl-zeichen-numbering-reference-to-the-allowed-number-of-characters/684703
+// Ab diesem Eintrag weitermachen: LINK EINFÜGEN
 
 Erfahre, was sich in der Woche vom {startWeekDate} bis zum {endWeekDate} bei plentymarkets getan hat. Im Folgenden findest du alle Changelog-Einträge der letzten Woche für stable- und early-Systeme.
 
@@ -20,51 +21,6 @@ stable::
 --
 
 :version: stable
-
-[discrete]
-== Geändert
-
-Folgende Änderungen wurden in den letzten 7 Tagen auf *{version}* veröffentlicht.
-
-[discrete]
-=== OTTO
-
-:otto-master-date: 17.06.2022
-:otto-master-link: https://forum.plentymarkets.com/uploads/short-url/zeeTRMqGCyRjFB5kPbHZKRMY6vl.xlsx
-
-include::partial$otto-master-file.adoc[]
-
-[discrete]
-=== plentyShop
-
-* Wenn Kund:innen für eine Eigenschaft vom Typ *Mehrfachauswahl* einen oder mehrere Eigenschaftswerte auswählen, so werden die ausgewählten Eigenschaftswerte nun als Array im plentyShop-Frontend ausgegeben. Vor dieser Änderung war es so, dass ein einzelner ausgewählter Eigenschaftswert als Objekt in einer Variablen ausgegeben wurde.
-
-'''
-
-[discrete]
-== Behoben
-
-Folgende Probleme wurden in den letzten 7 Tagen auf *{version}* behoben.
-
-[discrete]
-=== CRM
-
-* Im Menü *CRM » Kontakte* war die Zahlungsart Rechnung als Standard-Zahlungsart in den Optionen nicht mehr verfügbar. Dies wurde behoben.
-* Durch Ereignisaktionen erstellte Ticketsystem-Nachrichten waren teilweise fehlerhaft. Dadurch konnte man die entsprechenden Tickets nicht mehr bearbeiten. Dieser Fehler wurde behoben.
-
-[discrete]
-=== Prozesse
-
-* Bei der Retourenetikettenerstellung über die Prozesse kam es zu einer Fehlermeldung, wenn man z.B. eine Retoure ausgewählt hat und nicht den Hauptauftrag. Das Retourenetikett wurde dennoch erstellt. Dieser Fehler ist jetzt behoben.
-* Es ist ein Problem mit Aufträge entstanden, die Tags nutzen. Sobald man diese Aufträge filtern wollte (ohne Tag Filter), wurden diese Aufträge nicht von der Aktion *Filter* beachtet. Dieser Fehler ist jetzt behoben worden.
-
---
-
-early::
-+
---
-
-:version: early
 
 [discrete]
 == Neu
@@ -117,6 +73,39 @@ Folgende Probleme wurden in den letzten 7 Tagen auf *{version}* behoben.
 
 --
 
+early::
++
+--
+
+:version: early
+
+[discrete]
+== Neu
+
+Folgende Neuerungen wurden in den letzten 7 Tagen auf *{version}* veröffentlicht.
+
+
+
+'''
+
+[discrete]
+== Geändert
+
+Folgende Änderungen wurden in den letzten 7 Tagen auf *{version}* veröffentlicht.
+
+
+
+'''
+
+[discrete]
+== Behoben
+
+Folgende Probleme wurden in den letzten 7 Tagen auf *{version}* behoben.
+
+
+
+--
+
 Plugin-Updates::
 +
 --
@@ -127,45 +116,9 @@ Folgende Plugins wurden in den letzten 7 Tagen in einer neuen Version auf plenty
 |===
 |Plugin-Name |Version |To-do
 
-|link:https://marketplace.plentymarkets.com/cytcategorycrossselling_6975[Cross-Selling: Weitere Artikel derselben Kategorie^]
-|1.1.0
-|-
-
-|link:https://marketplace.plentymarkets.com/galaxus_4788[Galaxus.ch^]
-|1.12.7
-|-
-
-|link:https://marketplace.plentymarkets.com/reviewconverter_6843[Google Shopping Produktbewertungen (Sterne)^]
-|1.1.0
-|-
-
-|link:https://marketplace.plentymarkets.com/metro_6600[Metro^]
-|2.2.2
-|-
-
-|link:https://marketplace.plentymarkets.com/cytcookielesstracking_7059[Plenty Google Tracking - 100% Datenqualität, DSGVO konform^]
-|1.3.0
-|-
-
-|link:https://marketplace.plentymarkets.com/cytcustomitemlistpages_54920[Quick & Easy Artikelliste für Newsletter Kampagnen, Aktionen, Direktvertrieb u.v.m.^]
-|1.1.0
-|-
-
-|link:https://marketplace.plentymarkets.com/shopify_4944[Shopify.com^]
-|2.10.13
-|-
-
-|link:https://marketplace.plentymarkets.com/cytitemavailabilitynotification_6906[Verfügbarkeitsbenachrichtigung mit Statistik^]
-|1.5.0
-|-
-
-|link:https://marketplace.plentymarkets.com/cytprintbasket_7002[Warenkorb drucken^]
-|1.1.0
-|-
-
-|link:https://marketplace.plentymarkets.com/cytautomaticcrossselling_7016[Wird oft gekauft mit...^]
-|1.2.0
-|-
+|
+|
+|
 
 |===
 
