--- a/docs/de-de/modules/business-entscheidungen/pages/durchschnittlicher-bestellwert.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/durchschnittlicher-bestellwert.adoc
@@ -219,7 +219,7 @@ include::partial$liegt-zwischen.adoc[]
 
 include::partial$auftragstyp.adoc[]
 
-_Beachte_: Sind in diesem Filter auch Retouren und Gutschriften ausgewählt, werden die Preise aus diesen Auftragstypen abgezogen.
+_Beachte:_ Sind in diesem Filter auch Retouren und Gutschriften ausgewählt, werden die Preise aus diesen Auftragstypen abgezogen.
 Bei der Auftragsanzahl, mit der geteilt wird, werden Gutschriften und Retouren dann dementsprechend nicht mitgezählt.
 
 [.collapseBox]
