Added note about assistant

--- a/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
@@ -432,6 +432,8 @@ Artikeldaten werden über einen Katalog zu Kaufland exportiert. Kataloge für Ka
 
 Für jede Produktkategorie auf Kaufland gibt es ein eigenes Katalog-Format. In jedem Format werden unterschiedliche Artikeldaten exportiert, je nachdem, welche Informationen Kaufland für eine Produktkategorie benötigt. In dem Format für *Lebensmittel* müssen beispielsweise andere Artikeldaten verknüpft werden als in dem Format für *Auto & Motorrad*. Du musst also für jede Produktkategorie von Kaufland, in der du Artikel verkaufen möchtest, einen eigenen Katalog erstellen.
 
+*_Hinweis:_* Für Kaufland können Kataloge momentan nur mit dem Assistenten *Kaufland - Kataloge erstellen* und _nicht_ über das Menü *Daten » Kataloge* erstellt werden.
+
 :number-of-boxes: Info-Box
 
 [.instruction]
